# skill-universal

./: .coverage  .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
examples/agent-sdk/: README.md
examples/claude-code/: README.md
examples/openclaw/: README.md
loaders/python/: requirements.txt  skill_loader.py
loaders/python/tests/: __init__.py  test_loader.py
loaders/typescript/: SkillLoader.ts  package.json  tsconfig.json
loaders/typescript/tests/: SkillLoader.test.ts
skill_universal/: __init__.py  skill_loader.py
skills/customer-support/: SKILL.md
skills/document-processor/: SKILL.md
skills/github-analyzer/: SKILL.md
skills/tech-research/: SKILL.md
tests/: __init__.py  test_skill_loader.py
